microservices/nodejs_microservice_app/k8s/base/ingress/backend-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ing-svc
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules: []
